--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
             height: 100%;
         }
         
+        body {
+            max-width: 360px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        
         img {
             max-width: 100%;
         }
