explain the readme

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
     <p>Have fun.</p>
 
-    <p>Find the GitHub repo <a href="https://github.com/hupili/b">here</a></p>
+    <p>Find the GitHub repo <a href="https://github.com/hupili/b">here</a>.</p>
 
 </body>
 
