chagne code segment font size

--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
             opacity: 0.6;
             background-color: white;
         }
+        
+        code {
+            margin: 0;
+            max-width: 100%;
+            word-break: break-all;
+            font-family: monospace;
+        }
     </style>
 </head>
 
