--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <em>By</em>
             <br>
             <strong>
-                Pili Hu, VSCode and GitHub
+                Mindy, VSCode and GitHub
             </strong>
         </author-block>
     </cover-image>
