--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <h3>Image with caption</h3>
 
     <figure>
-        <img src="images/screenshot-demo.png" alt="">
+        <img src="李金璇1.jpeg" alt="">
         <figcaption>
             <em> How "Big Road" looks like on mobile phone.</em>
             <br> Source: screenshot
