--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </figure>
 
     <figure>
-        <img src="images/screenshot-demo.png" alt="">
+        <img src="李金璇1.jpeg" alt="">
         <figcaption>
             Sometimes, the caption can be very long which is a standalone story by itself. So you don't have to put the entire block into emphasis mode. Just <em>emaphsize the part you find most important</em>.
         </figcaption>
