--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <h3>Image with caption</h3>
 
     <figure>
-        <img src="李金璇1.jpeg" alt="">
+        <img src="images/李金璇1.jpeg" alt="">
         <figcaption>
             <em> How "Big Road" looks like on mobile phone.</em>
             <br> Source: screenshot
@@ -184,7 +184,7 @@
     </figure>
 
     <figure>
-        <img src="李金璇1.jpeg" alt="">
+        <img src="images/李金璇1.jpeg" alt="">
         <figcaption>
             Sometimes, the caption can be very long which is a standalone story by itself. So you don't have to put the entire block into emphasis mode. Just <em>emaphsize the part you find most important</em>.
         </figcaption>
