--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     </p>
 
     <responsive-block>
-        <iframe src='//hupili.net/20170800-sichuan-earthquake-in-100years/' frameborder='0' allowfullscreen>
+        <iframe src='//infogram.com/mindy-1hmr6gje98v96nl?live' frameborder='0' allowfullscreen>
         </iframe>
     </responsive-block>
 
