--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
     <cover-image>
         <img src="images/Rainbow-Desert-Road-Beautiful-Big-Bend-Wallpaper-3414934.jpg" alt="cover photo">
         <h1>
-            Big Road
+            第七天（余華）
         </h1>
         <author-block>
             <em>By</em>
             <br>
             <strong>
-                Mindy, VSCode and GitHub
+                Mindy(ZHAO Minzhu) for JOUR2106
             </strong>
         </author-block>
     </cover-image>
