--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 <body>
     <cover-image>
-        <img src="images/Rainbow-Desert-Road-Beautiful-Big-Bend-Wallpaper-3414934.jpg" alt="cover photo">
+        <img src="images/第七天（2）.JPG" alt="cover photo">
         <h1>
             第七天（余華）
         </h1>
@@ -176,7 +176,7 @@
     <h3>Image with caption</h3>
 
     <figure>
-        <img src="images/李金璇1.jpeg" alt="">
+        <img src="第七天（1）.JPG" alt="">
         <figcaption>
             <em> How "Big Road" looks like on mobile phone.</em>
             <br> Source: screenshot
