--- a/index.html
+++ b/index.html
@@ -129,35 +129,6 @@
 
     <p>This is a simplist solution to a mobile-only web story. Users with no coding background should be able to use this template after a 10 minute crash course on HTML. One does not need to learn CSS, in order to make it work in a reasonable way.</p>
 
-    <h2> Features </h2>
-
-    <p>
-        "Big Road" has the following key features:
-    </p>
-
-    <ul>
-        <li>
-            <strong>HTML only</strong> -- Actually, you don't need to learn HTML. Just get the code of current page and modify it.
-        </li>
-        <li>Sensible default style.</li>
-        <li>Common elements:
-            <code>p, em, strong</code>
-        </li>
-        <li>Snippet for responsive embedding of interactive charts, via <code>iframe</code></li>
-    </ul>
-
-    <h2> Getting started </h2>
-
-    <p>Make your first web story in three steps:</p>
-
-    <ol>
-        <li>Fork this repository</li>
-        <li>Modify <code>index.html</code> to include your content</li>
-        <li>
-            Your web story is available on <code>username.github.io/big-road/</code>. For example this current page is available at <a href="hupili.github.io/big-road/">hupili.github.io/big-road/</a>. Checkout
-            <a href="https://github.com/hupili/python-for-data-and-media-communication-gitbook/blob/master/notes-week-00.md#github-pages">this page</a> for more information about hosting on GitHub Pages.
-        </li>
-    </ol>
 
     <h2>Demo of supported elements for your article</h2>
 
@@ -173,7 +144,7 @@
         is subtle and the choice depends on the author.
     </p>
 
-    <h3>Image with caption</h3>
+    <h3>About this book</h3>
 
 
     <figure>
