--- a/index.html
+++ b/index.html
@@ -130,29 +130,28 @@
     <p>This is a simplist solution to a mobile-only web story. Users with no coding background should be able to use this template after a 10 minute crash course on HTML. One does not need to learn CSS, in order to make it work in a reasonable way.</p>
 
 
-    <h2>Demo of supported elements for your article</h2>
+    <h2>About</h2>
 
     <p>
         You have already seen headings (<code>h1</code>, <code>h2</code>, <code>h3</code>), listings (<code>ul</code>, <code>ol</code>, <code>li</code>), and paragraph (<code>p</code>) in previous codes. In this section, we show you several other useful
         elements.
     </p>
 
-    <h3>Highlight texts in a paragraph</h3>
+    <h3>About the book</h3>
 
     <p>
-        In a pragraph, there may be some key information that you want to highlight. In HTML, we have two basic semantic tags for this purpose. You can <em>emphasize something</em> , or <strong>strongly emphasize something</strong>. The difference here
-        is subtle and the choice depends on the author.
+       余华的《第七天》是一部催人泪下，引人深思的长篇小说。从人过世以后的角度讲述了生命的幸福与苦难，揭示了社会的残酷和世间悲剧，以及人与人之间的冷漠、无情与贪婪。在这样的世界里，亲情和友情是我们生活里唯一存在的依靠。余华以第一人称叙述了故事的主人公,杨飞在死后的七天里每天都遇到不同和他一样在生活底层的人们，时时刻刻有人遭遇不同的事故导致死亡，来到了“死无葬身之地”。这里聚集着没钱买墓地的亡灵们，他们都存留着遗憾和生前的后悔，不过终究可以在这里获得他们所渴望的安宁，并与之前死去的家人、朋友们相汇直到在世的家人有钱帮助买墓地。
     </p>
 
-    <h3>About this book</h3>
+    <h3>About the writer</h3>
 
 
     <figure>
         <img src="images/第七天（1）.JPG" alt="">
         <figcaption>
-            Sometimes, the caption can be very long which is a standalone story by itself. So you don't have to put the entire block into emphasis mode. Just <em>emaphsize the part you find most important</em>.
+            The book cover
         </figcaption>
     </figure>
 
-    <p>Note, an image aspect ratio of 16:9 is recommended as a sensible default.</p>
+    <p>This book is written by famous  Chinese writer -- YuHua.He has published a lot of book about social problems in China.In the Chinese social backgroud (the increasing development), he wrote lots of stories about normal people feom working class.</p>
 
