--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
     <h2>About</h2>
 
     <p>
-        You have already seen headings (<code>h1</code>, <code>h2</code>, <code>h3</code>), listings (<code>ul</code>, <code>ol</code>, <code>li</code>), and paragraph (<code>p</code>) in previous codes. In this section, we show you several other useful
-        elements.
+       This  book is written by YuHua in 2013.
     </p>
 
     <h3>About the book</h3>
@@ -149,7 +148,7 @@
     <figure>
         <img src="images/第七天（1）.JPG" alt="">
         <figcaption>
-            The book cover
+                The book cover
         </figcaption>
     </figure>
 
