--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Big Road: Simplist's solution to a mobile-only web story</title>
+    <title>the website about ‘第七天’</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0,maximum-scale=1.0">
     <style>
         /* Inspired by: http://embedresponsively.com/ */
@@ -126,8 +126,6 @@
             </strong>
         </author-block>
     </cover-image>
-
-    <p>This is a simplist solution to a mobile-only web story. Users with no coding background should be able to use this template after a 10 minute crash course on HTML. One does not need to learn CSS, in order to make it work in a reasonable way.</p>
 
 
     <h2>About</h2>
