--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </p>
 
     <responsive-block>
-        <iframe src='https://www.youtube.com/watch?v=-19I0kJ-FRA' frameborder='0' allowfullscreen>
+        <iframe src='https://youtu.be/LfEN0sAQXHs' frameborder='0' allowfullscreen>
         </iframe>
     </responsive-block>
 
