--- a/index.html
+++ b/index.html
@@ -170,29 +170,13 @@
 
     <p>The default result is as follows:</p>
 
-    <figure>
-        <img src="images/responsive-embedding-video.png" alt="">
-        <figcaption>
-            Default iframe embedding is not responsive to the screen width. It is either too small or too big.
-        </figcaption>
-    </figure>
-
-    <p>
-        Following is one responsive video. You can check the source code of this page to see how it works. You don't have to completely understand the internal works. Simply subsituting the URL suffices.
-    </p>
-
-    <responsive-block>
-        <iframe src='https://youtu.be/LfEN0sAQXHs' frameborder='0' allowfullscreen>
-        </iframe>
-    </responsive-block>
-
     
 
     <h2>Epilogue</h2>
 
     <p>Have fun.</p>
 
-    <p>Find the GitHub repo <a href="https://github.com/hupili/big-road">here</a>.</p>
+    <p>Find the GitHub repo <a href="https://github.com/MindyZHAOMinzhu/MindyZHAOMinzhu.github.io">here</a>.</p>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37311363-17"></script>
