--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <p>Have fun.</p>
 
-    <p>Find the GitHub repo <a href="https://github.com/MindyZHAOMinzhu/MindyZHAOMinzhu.github.io">here</a>.</p>
+    <p>Find the GitHub repo <a href="http://datavis.studio/">here</a>.</p>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37311363-17"></script>
