--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
 
     <h2>Epilogue</h2>
 
-    <p>Have fun.</p>
+    <p>Have fun and read this book.</p>
 
-    <p>Find the GitHub repo <a href="http://datavis.studio/">here</a>.</p>
+    <p>Find more information about the course(JOUR2106) <a href="http://datavis.studio/">here(JOUR2106)</a>.</p>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37311363-17"></script>
