--- a/index.html
+++ b/index.html
@@ -174,3 +174,27 @@
 </body>
 
 </html>
+<footer>
+            <p>Posted by: Anh Nguyen</p>
+            <p>Course Website: <a href="http://datavis.studio">
+  Data Visualization</a>.</p>
+    
+
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-37311363-17"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-37311363-17');
+    </script>
+    
+
+  
+
+</footer>
