--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
             word-break: break-all;
             font-family: monospace;
         }
+                footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: black;
+            color: white;
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -170,6 +179,30 @@
         gtag('js', new Date());
         gtag('config', 'UA-37311363-17');
     </script>
+    <footer>
+            <p>Posted by: Anh Nguyen</p>
+            <p>Course Website: <a href="http://datavis.studio">
+  Data Visualization</a>.</p>
+    
+
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-37311363-17"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-37311363-17');
+    </script>
+    
+
+  
+
+</footer>
 
 </body>
 
