--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             left: 0;
             bottom: 0;
             width: 100%;
-            background-color: black;
-            color: white;
+            background-color: white;
+            color: black;
             text-align: center;
         }
     </style>
@@ -180,7 +180,7 @@
         gtag('config', 'UA-37311363-17');
     </script>
     <footer>
-            <p>Posted by: Anh Nguyen</p>
+            <p>Posted by: Mindy ZHAO</p>
             <p>Course Website: <a href="http://datavis.studio">
   Data Visualization</a>.</p>
     
