--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             left: 0;
             bottom: 0;
             width: 100%;
-            background-color: white;
+            background-color: gray;
             color: black;
             text-align: center;
         }
