fund a folder hw2

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -180,7 +180,8 @@
         gtag('config', 'UA-37311363-17');
     </script>
     <footer>
-            <p>Posted by: Mindy ZHAO</p>
+            <p>Posted by: Mindy ZHAO(hhh)
+            </p>
             <p>Course Website: <a href="http://datavis.studio">
   Data Visualization</a>.</p>
     
