--- a/hw2(folder)/hw2.html
+++ b/hw2(folder)/hw2.html
@@ -11,12 +11,12 @@
   <p>here is my introduction</p>
   <ul>
     <li>
-      project 1
-      <a href="hw1/">homework1</a>
+      
+      <a href="../hw1/">homework1</a>
     </li>
     <li>
-      <a href="hw1/index.html">homework1</a>
-      project 2
+      <a href="../hw1/index.html">homework1</a>
+     
     </li>
   </ul>
 </body>
