--- a/hw2(folder)/hw2.html
+++ b/hw2(folder)/hw2.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
         body {
             font-size: 16px;
