--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
         .profile1,
         .profile2 {
-            background-color: plum>;
+            background-color: plum;
             margin: 2px;
         }
         
