--- a/hw3/index.html
+++ b/hw3/index.html
@@ -240,14 +240,11 @@
             } else if (num2 > 3) {
                 result = 'Wrong data'
             } else {
-                result = a / b
+                result = a / (b * b)
 
             }
-            document.getElementById('result').addEventListener('click', result)
-            document.getElementById('calculate1').addEventListener('click', calculate1)
-            document.getElementById("num1").addEventListener('change', calculate1)
-            document.getElementById("num2").addEventListener('keyup', calculate1)
-            document.getElementById("num2").addEventListener('change', calculate1)
+            document.getElementById("result").value = result
+
 
 
 
@@ -264,6 +261,7 @@
 
             result2 = (1.2 * result) + (0.23 * c - 5.4) - 10.8
                 //write the add caculation
+            document.getElementById("result1").value = result2
 
 
 
@@ -279,7 +277,6 @@
             document.getElementById("result1").value = result3
 
 
-
         }
         document.getElementById("calculate1").addEventListener('click', calculate1)
         document.getElementById("calculate2").addEventListener('click', calculate2)
@@ -288,6 +285,13 @@
 
         document.getElementById("num1").addEventListener('change', calculate1)
         document.getElementById("num2").addEventListener('keyup', calculate1)
+        document.getElementById("num2").addEventListener('change', calculate2)
+        document.getElementById("num3").addEventListener('change', calculate3)
+
+        document.getElementById('result').addEventListener('click', calculate1)
+        document.getElementById('calculate1').addEventListener('click', calculate1)
+        document.getElementById("num1").addEventListener('change', calculate1)
+
         document.getElementById("num2").addEventListener('change', calculate1)
     </script>
 
