--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <cover-image>
         <img src="images/Rainbow-Desert-Road-Beautiful-Big-Bend-Wallpaper-3414934.jpg" alt="cover photo">
         <h1>
-            Big Road
+            My awesome web story
         </h1>
         <author-block>
             <em>By</em>
